# cargo-tools

./: .gitignore  .vscodeignore  ARCHITECTURE_ROADMAP.md  ARCHITECTURE_SUMMARY.md  BUGFIX_JOIN_ERROR.md  CHANGELOG.md  COMMAND_SUBSTITUTION.md  Cargo.toml  DEVELOPMENT_STATUS.md  FEATURE_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_PROGRESS.md  Makefile.toml  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASING.md  TARGET_COMMANDS.md  TARGET_COMMAND_TEST_SUMMARY.md  TESTING.md  TODO.md  WORKSPACE_MEMBER_GROUPING.md  package-lock.json  package.json  test-feature-cargo-metadata.js  test-feature-implementation.js  test-feature-refinement.js  tsconfig.json  verify_state_value_macro.sh  webpack.config.js
.cargo/: config.toml
.github/: copilot-instructions.md
.github/instructions/: rust_coding_guidelines.instructions.md
.github/prompts/: rust_vs_code_state_manager.prompt.md  state_manager.prompt.md  state_manager_implementation_summary.md  wasm_async_trait.prompt.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: coding_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: cargoConfigurationReader.ts  cargoExtensionManager.ts  cargoMakeTreeProvider.ts  cargoProfile.ts  cargoProjectController.ts  cargoTarget.ts  cargoTaskProvider.ts  cargoTools.ts  cargoWorkspace.ts  command.ts  commandSubstitution.ts  configuration.ts  configurationTreeProvider.ts  context.ts  execute.ts  extension-new.ts  extension.ts  iconMapping.ts  makefileTreeProvider.ts  outlineTreeProvider.ts  pinnedCommandsTreeProvider.ts  pinnedMakefileTasksTreeProvider.ts  profilesTreeProvider.ts  projectOutlineTreeProvider.ts  projectStatusTreeProvider.ts  runtime.ts  stateManager.ts  statusBarProvider.ts  targetsTreeProvider.ts  task.ts  window.ts  workspaceTreeProvider.ts
src/test/: buildTargetsIntegration.test.ts  cargoExtensionManager.test.ts  extension.test.ts  stateManager.test.ts
src/types/: webassembly.d.ts
test-rust-project/: Cargo.toml  Makefile.toml
test-rust-project-single-crate/: Cargo.toml
test-rust-project-single-crate/examples/: config_demo.rs  data_processing.rs
test-rust-project-single-crate/src/: lib.rs  main.rs
test-rust-project/.cargo/: config.toml
test-rust-project/benches/: fibonacci.rs
test-rust-project/cli/: Cargo.toml  Makefile.toml
test-rust-project/cli/src/: main.rs
test-rust-project/core/: Cargo.toml  Makefile.toml
test-rust-project/examples/: hello_world.rs
test-rust-project/src/: lib.rs  main.rs
test-rust-project/test-cdylib/: Cargo.toml
test-rust-project/test-cdylib/src/: lib.rs
test-rust-project/test-proc-macro/: Cargo.toml
test-rust-project/test-proc-macro-alt/: Cargo.toml
test-rust-project/test-proc-macro-alt/src/: lib.rs
test-rust-project/test-proc-macro/src/: lib.rs
test-rust-project/test-staticlib/: Cargo.toml
test-rust-project/tests/: integration_test.rs
test-rust-project/utils/: Cargo.toml
test-rust-project/utils/benches/: perf_alt.rs
test-rust-project/utils/examples/: strings.rs
test-rust-project/utils/src/: lib.rs
test-rust-project/web-server/: Cargo.toml
test-rust-project/web-server/examples/: simple.rs
test-rust-project/web-server/src/: lib.rs  main.rs
test-single-crate/: Cargo.toml
test-single-crate/src/: main.rs
vscode_extension/: README.md  eslint.config.mjs  tsconfig.json  webpack.config.js
vscode_extension/docs/: README.md  commands.md  settings.md
vscode_extension/src/: cargoMakeTreeProvider.ts  execute.ts  runtime.ts  tasksTreeProvider.ts  window.ts  xtaskTreeProvider.ts
xtask/src/: main.rs
