[workspace]
members = [
    "packages/cargo_tools",
    "packages/cargo_tools_vscode",
    "packages/iced_viewless",
    "xtask",
]
default-members = [
    "packages/cargo_tools",
    "packages/cargo_tools_vscode",
    "packages/iced_viewless",
]

resolver = "2"

[workspace.dependencies]
cargo_tools = { path = "packages/cargo_tools" }
iced_viewless = { path = "packages/iced_viewless", default-features = false }
futures = { version = "0.3.31", default-features = false }
cargo_metadata = "0.23.1"
wasm-bindgen = { version = "0.2.106", default-features = false }
wasm-bindgen-futures = { version = "0.4.56", default-features = false }
wasm-bindgen-test = "0.3.56"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.0"
thiserror = { version = "2.0.17", default-features = false }
iced_futures = "0.14.0"
iced_runtime = "0.14.0"
tokio = { version = "1.49.0", default-features = false, features = [
    "macros",
    "rt",
] }
tracing = { version = "0.1.43", default-features = false }
toml = { version = "0.9.8", features = [
    "parse",
    "serde",
], default-features = false }
itertools = "0.14.0"
anyhow = { version = "1.0.102", default-features = false }
assert2 = "0.4.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
] }
