[package]
name = "single-crate-core"
version = "0.1.0"
edition = "2021"

# Library target (implicit)
[lib]
name = "single_crate_core"

# Binary target
[[bin]]
name = "single-crate-binary"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[features]
default = ["std-support"]
std-support = []
async-support = []
