[workspace]
members = ["core", "cli", "web-server", "utils"]
resolver = "2"
default-members = ["core", "cli", "web-server", "utils"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
