[workspace]
members = [
    "core",
    "cli",
    "web-server",
    "utils",
    "test-cdylib",
    "test-staticlib",
]
resolver = "2"
default-members = [
    "core",
    "cli",
    "web-server",
    "utils",
    "test-cdylib",
    "test-staticlib",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# Custom workspace-level profiles
[profile.fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.staging]
inherits = "release"
opt-level = 2
debug = 1
overflow-checks = true
lto = false

[profile.bench-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
